# squid

./: .gitignore  CMakeLists.txt  README.md
configs/: config.json
exam/exam_assignments/task01/: chapteronediscuss.txt  hello  hello.cpp  monte  monte.cpp  pi.cpp  report.txt  thread  thread.cpp
exam/exam_assignments/task02/: description.txt  pi  race  race.cpp  schedule_clause  unbalanced_workload  unbalanced_workload.cpp
exam/exam_assignments/task03/: changes.txt  chapter3.txt  mandelbrot  mandelbrot.cpp  mandelbrot_opt  monte  monte.cpp  pi_num  pi_num.cpp
exam/exam_assignments/task04/: bench_size  bench_threads  concurrency.txt  explanation.txt  min_max_quicksort_size.cpp  min_max_quicksort_threads.cpp  speedup_results_size.csv  speedup_results_threads.csv  vis_size.py  vis_threads.py
exam/exam_assignments/task04/system/: lscpu.txt  ram.txt  uname.txt
exam/exam_assignments/task04/warmup/: merge  merge_single_threaded.cpp  single  slow  speed  speedup.cpp
exam/exam_assignments/task05/exam2/: CMakeLists.txt  catch_tests_fizzbuzz.cpp
exam/exam_assignments/task05/exam2/lib/fizzbuzz/: CMakeLists.txt
exam/exam_assignments/task05/exam2/lib/fizzbuzz/include/: fizzbuzz.h
exam/exam_assignments/task05/exam2/lib/fizzbuzz/src/: fizzbuzz.cpp
exam/exam_assignments/task05/quantpng/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  quantpng
exam/exam_assignments/task05/quantpng/libs/lodepng/: CMakeLists.txt  Makefile  cmake_install.cmake
exam/exam_assignments/task05/quantpng/libs/quantize/: CMakeLists.txt  Makefile  cmake_install.cmake
exam/exam_assignments/task06/: answers.txt
exam/exam_assignments/task07/: avx512.drawio  exam_clauses.txt  exam_discussion.txt
exam/exam_assignments/task08/: task.txt
exam/exam_assignments/task09/: answers.txt
exam/exam_assignments/task09/memory-mountain-master/: benchmark  data-cm-framework.txt  plot.py
exam/exam_assignments/task10/: answers.txt
exam/exam_assignments/task11/: exam.txt
exam/exam_assignments/task12/: reports.txt
include/: BaseDeconvolutionAlgorithm.h  DeconvolutionConfig.h  HyperstackImage.h
input/: origin.tif  psf.tif
src/: main.cpp
src/deconvolution/: BaseDeconvolutionAlgorithm.cpp
src/deconvolution/algorithms/: RLDeconvolutionAlgorithm.cpp  RLTVDeconvolutionAlgorithm.cpp
src/hyperstack/: HyperstackIO.cpp  HyperstackImage.cpp
src/utilities/: UtlFFT.cpp  UtlImage.cpp
tests/: UtlFFT_tests.cpp  UtlImage_tests.cpp
